--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .logo{
     max-width: 100%;
-    width: 300px;
+    width: 360px;
     height: 270px;
     padding: 10px;
 }
@@ -200,7 +200,25 @@ body{
     height: 40px;
 }
 
-/* Conteúdos exibidos lado a lado em dispositivos móveis */
+.whatsapp-float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #25d366;
+    color: #fff;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
+ }
+
+ .whatsapp-float .whatsapp-icon {
+    margin-top: 15px;
+ }
+
 @media (max-width: 768px) {
     .container {
         flex-direction: column;
